# DIS-Exercies

./: .gitignore  README.md  checkstyle.xml  clang-tidy-intellij.xml  settings.gradle.kts
EX1/: CMakeLists.txt  client.hpp  client_main.cpp  errors.hpp  server.hpp  server_main.cpp
EX1/clients/: TcpEchoClient.cpp  TcpEchoClient.hpp  TcpEnviEchoClient.cpp  TcpEnviEchoClient.hpp  UdpEchoClient.cpp  UdpEchoClient.hpp  shared.hpp
EX1/cpp/: .clang-tidy  CMakeLists.txt  client.hpp  client_main.cpp  common.cpp  common.hpp  errors.hpp  server.hpp  server_main.cpp
EX1/cpp/clients/: TcpEchoClient.cpp  TcpEchoClient.hpp  TcpEnviClient.cpp  TcpEnviClient.hpp  TcpEnviEchoClient.cpp  TcpEnviEchoClient.hpp  TcpHttpClient.cpp  TcpHttpClient.hpp  TcpHttpEchoClient.cpp  TcpHttpEchoClient.hpp  UdpEchoClient.hpp  shared.cpp  shared.hpp
EX1/cpp/servers/: TcpEchoServer.cpp  TcpEchoServer.hpp  TcpEnviEchoServer.cpp  TcpEnviEchoServer.hpp  TcpEnviServer.cpp  TcpEnviServer.hpp  TcpHttpEchoServer.cpp  TcpHttpServer.cpp  TcpHttpServer.hpp  UdpEchoServer.hpp  shared.cpp  shared.hpp
EX1/java/: .editorconfig
EX1/java/src/com/fh/: ClientMain.java  Client_main.java  EchoClient.java  EchoServer.java  ServerMain.java  Server_main.java
EX1/java/src/com/fh/clients/echo/: EchoClient.java
EX1/java/src/com/fh/clients/envi/: EnvData.java  IEnvService.java  TcpEnviClient.java
EX1/java/src/com/fh/sensor/: EnvData.java  IEnvService.java  SensorClient.java  SensorClient_main.java
EX1/java/src/com/fh/servers/: EchoServer.java
EX1/servers/: TcpEchoServer.cpp  TcpEchoServer.hpp  TcpEnviEchoServer.cpp  TcpEnviEchoServer.hpp  TcpHttpEchoServer.hpp  UdpEchoServer.cpp  UdpEchoServer.hpp  shared.cpp  shared.hpp
EX2/: .gitignore  build.gradle.kts  checkstyle.xml  settings.gradle.kts
EX2/.config/: detekt-config.yaml
EX2/interfaces/: build.gradle.kts
EX2/interfaces/src/main/java/: EnvData.java  ICookiesService.java  IEnvService.java  IRemoteCookies.java
EX2/lib/: build.gradle.kts
EX2/rmi/client/: build.gradle.kts
EX2/rmi/server/: build.gradle.kts
EX2/servlets/: build.gradle.kts
EX2/servlets/src/main/java/: InfoServlet.java  SessionServlet.java  TcpEnviClient.java
EX2/servlets/src/main/kotlin/: EnvironmentServiceServlet.kt  HelloWorldServlet.kt  InfoServlet.java  Main.kt  SessionServlet.java
EX2/servlets/src/main/resources/: env.html  info.html  session.html  template.html
EX3/: .gitignore  build.gradle.kts  settings.gradle.kts
EX3/.config/: detekt-config.yaml
EX3/jaxb/: build.gradle.kts
EX3/jaxb/src/main/java/: Main.java  Pet.java  Type.java  WGS.java  Wgs.java
EX3/jaxb/src/main/kotlin/: WeatherHandler.kt  Wind.kt  main.kt
EX3/lib/: build.gradle.kts
EX3/lib/src/main/java/: Constants.java
EX3/lib/src/main/kotlin/: DummyData.kt
EX3/rest/: build.gradle.kts
EX3/rest/src/main/java/: HelloWorld.java
EX3/rest/src/main/kotlin/: EnvironmentService.kt
EX3/rest/src/main/webapp/: env.html
EX3/soap/: build.gradle.kts
EX3/soap/client/: build.gradle.kts
EX3/soap/server/: build.gradle.kts
grpc/: build.gradle.kts  settings.gradle.kts
grpc/buildSrc/src/main/kotlin/: Constants.kt
grpc/client/: build.gradle.kts
grpc/service/: build.gradle.kts
grpc/stub/: build.gradle.kts
server/: Makefile  README.md  main.c  server.c  server.h
test/: build.gradle
(+50 files in other folders)
